add futura font

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,20 @@
 ---
+import "../styles/global.css";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro</title>
+  </head>
+  <body>
+    <div class="flex justify-center text-7xl">
+      <h1 class="w-3/4 text-center font-bold">
+        Websites built with custom design and code
+      </h1>
+    </div>
+  </body>
 </html>
