--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,24 @@
 import "../styles/global.css";
 ---
 
+<style>
+  :root {
+    --rainbow-1: 0%;
+    --rainbow-2: 21.35%;
+    --rainbow-3: 48.44%;
+    --rainbow-4: 100%;
+  }
+  .rainbow {
+    background: linear-gradient(
+      90deg,
+      #fc1e1e var(--rainbow-1),
+      #ff9245 var(--rainbow-2),
+      #5083ff var(--rainbow-3),
+      #ff660b var(--rainbow-4)
+    );
+  }
+</style>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -11,10 +29,37 @@ import "../styles/global.css";
     <title>Astro</title>
   </head>
   <body>
-    <div class="flex justify-center text-7xl">
-      <h1 class="w-3/4 text-center font-bold">
+    <div class="flex flex-col gap-6 items-center mt-12">
+      <h1
+        class="text-7xl rainbow w-3/4 py-2 text-center font-bold bg-clip-text text-transparent rainbow"
+      >
         Websites built with custom design and code
       </h1>
+      <p class="w-1/2 text-gray-500 text-center">
+        Freelance developer that builds you an unique online presence
+      </p>
+      <div class="flex gap-4">
+        <button
+          class="bg-gray-900 text-white px-8 py-4 rounded-full flex gap-4"
+        >
+          <span>Contact me</span>
+          <span>{">"}</span>
+        </button>
+        <button class="px-8 py-4 rounded-full flex gap-4">
+          <span>Pricing</span>
+          <span>{">"}</span>
+        </button>
+      </div>
+      <div class="flex gap-4 items-center">
+        <span class="relative flex h-3 w-3">
+          <span
+            class="animate-ping absolute inline-flex h-full w-full rounded-full bg-sky-400 opacity-75"
+          ></span>
+          <span class="relative inline-flex rounded-full h-3 w-3 bg-sky-500"
+          ></span>
+        </span>
+        Available for worldwide freelance
+      </div>
     </div>
   </body>
 </html>
