--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,18 @@ import "../styles/global.css";
       #5083ff var(--rainbow-3),
       #ff660b var(--rainbow-4)
     );
+    animation: shine 10s ease infinite;
+  }
+  @keyframes shine {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
   }
 </style>
 
@@ -31,7 +43,7 @@ import "../styles/global.css";
   <body>
     <div class="flex flex-col gap-6 items-center mt-12">
       <h1
-        class="text-7xl rainbow w-3/4 py-2 text-center font-bold bg-clip-text text-transparent rainbow"
+        class="text-7xl rainbow w-3/4 py-2 text-center font-bold text-transparent bg-clip-text bg-[length:750px_500px] rainbow"
       >
         Websites built with custom design and code
       </h1>
