fix colour changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import "../styles/global.css";
       #5083ff var(--rainbow-3),
       #ff660b var(--rainbow-4)
     );
-    animation: shine 10s ease infinite;
+    animation: shine 5s ease infinite;
   }
   @keyframes shine {
     0% {
@@ -43,7 +43,7 @@ import "../styles/global.css";
   <body>
     <div class="flex flex-col gap-6 items-center mt-12">
       <h1
-        class="text-7xl rainbow w-3/4 py-2 text-center font-bold text-transparent bg-clip-text bg-[length:750px_500px] rainbow"
+        class="text-7xl rainbow w-3/4 py-2 text-center font-bold text-transparent bg-clip-text bg-[length:500%] rainbow"
       >
         Websites built with custom design and code
       </h1>
