--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import "../styles/global.css";
-import HeroText from "../components/HeroText.astro";
 import PageLayout from "../layout/PageLayout.astro";
 ---
 
@@ -8,7 +7,38 @@ import PageLayout from "../layout/PageLayout.astro";
   title="Wesley Jessie - Freelance web design and development"
   description="Get custom made websites that stand out from templates. Life time gurantee."
 >
-  <HeroText />
+  <style>
+    .rainbow {
+      background: linear-gradient(
+        90deg,
+        #fc1e1e 0%,
+        #ff9245 21.35%,
+        #5083ff 48.44%,
+        #ff660b 100%
+      );
+      animation: shine 8s ease infinite;
+    }
+    @keyframes shine {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
+  </style>
+
+  <div class="flex justify-center mt-24">
+    <h1
+      class="text-7xl rainbow w-3/4 py-2 text-center font-bold text-transparent bg-clip-text bg-[length:300%_300%] rainbow"
+    >
+      Websites built with custom design and code
+    </h1>
+  </div>
+
   <div class="flex flex-col gap-6 items-center">
     <p class="w-1/2 text-gray-500 text-center">
       Freelance developer that builds you an unique online presence
