--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import PageLayout from "../layout/PageLayout.astro";
 >
   <style>
     .rainbow {
+      -webkit-background-clip: text;
       background: linear-gradient(
         90deg,
         #fc1e1e 0%,
