--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,6 @@ import PageLayout from "../layout/PageLayout.astro";
 >
   <style>
     .rainbow {
-      -webkit-background-clip: text;
       background: linear-gradient(
         90deg,
         #fc1e1e 0%,
@@ -34,7 +33,7 @@ import PageLayout from "../layout/PageLayout.astro";
 
   <div class="flex justify-center mt-24">
     <h1
-      class="text-7xl rainbow w-3/4 py-2 text-center font-bold text-transparent bg-clip-text bg-[length:300%_300%] rainbow"
+      class="text-7xl rainbow w-3/4 py-2 text-center font-bold rainbow text-transparent bg-clip-text bg-[length:300%_300%]"
     >
       Websites built with custom design and code
     </h1>
