--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import PageLayout from "../layout/PageLayout.astro";
 
   <div class="flex justify-center mt-24">
     <h1
-      class="rainbow text-7xl w-3/4 py-2 text-center font-bold text-transparent bg-clip-text bg-[length:300%_300%]"
+      class="rainbow text-7xl w-3/4 py-2 text-center font-bold text-transparent bg-[length:300%_300%] bg-clip-text"
     >
       Websites built with custom design and code
     </h1>
