--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,3 +13,29 @@
   font-style: normal;
   font-display: swap;
 }
+
+.rainbow {
+  background: linear-gradient(
+    90deg,
+    #fc1e1e 0%,
+    #ff9245 21.35%,
+    #5083ff 48.44%,
+    #ff660b 100%
+  );
+  animation: shine 8s ease infinite;
+}
+@keyframes shine {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
