fix tailwind production issue

--- a/src/layout/PageLayout.astro
+++ b/src/layout/PageLayout.astro
@@ -5,6 +5,7 @@ interface Props {
 }
 const { title } = Astro.props;
 const { description } = Astro.props;
+import "../styles/global.css";
 ---
 
 <html lang="en">
