--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -1,4 +1,3 @@
-
 <style>
   .rainbow {
     background: linear-gradient(
@@ -23,7 +22,7 @@
   }
 </style>
 
-<div class="flex justify-center mt-24">
+<div class="flex justify-center mt-24 mb-4">
   <h1
     class="text-7xl rainbow w-3/4 py-2 text-center font-bold text-transparent bg-clip-text bg-[length:300%_300%] rainbow"
   >
