complete styling in hero

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import HeroText from "../components/HeroText.astro";
+import Hero from "../components/Hero.astro";
 import PageLayout from "../layout/PageLayout.astro";
 ---
 
@@ -7,31 +7,7 @@ import PageLayout from "../layout/PageLayout.astro";
   title="Wesley Jessie - Freelance web design and development"
   description="Get custom made websites that stand out from templates. Life time gurantee."
 >
-  <HeroText />
-
-  <div class="flex flex-col gap-6 items-center">
-    <p class="w-1/2 text-gray-500 text-center">
-      Freelance developer that builds you an unique online presence
-    </p>
-    <div class="flex gap-4">
-      <button class="bg-gray-900 text-white px-8 py-4 rounded-full flex gap-4">
-        <span>Contact me</span>
-        <span>{">"}</span>
-      </button>
-      <button class="px-8 py-4 rounded-full flex gap-4">
-        <span>Pricing</span>
-        <span>{">"}</span>
-      </button>
-    </div>
-    <div class="flex gap-4 items-center">
-      <span class="relative flex h-3 w-3">
-        <span
-          class="animate-ping absolute inline-flex h-full w-full rounded-full bg-sky-400 opacity-75"
-        ></span>
-        <span class="relative inline-flex rounded-full h-3 w-3 bg-sky-500"
-        ></span>
-      </span>
-      Available for worldwide freelance
-    </div>
-  </div>
+  <main class="mx-6">
+    <Hero />
+  </main>
 </PageLayout>
