--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -22,10 +22,8 @@
   }
 </style>
 
-<div class="flex justify-center mt-24 mb-4">
-  <h1
-    class="text-7xl rainbow w-3/4 py-2 text-center font-bold text-transparent bg-clip-text bg-[length:300%_300%] rainbow"
-  >
-    Websites built with custom design and code
-  </h1>
-</div>
+<h1
+  class="text-6xl md:text-6xl xl:text-7xl 2xl:text-8xl rainbow xl:w-3/4 2xl:w-[70%] py-2 text-center font-bold text-transparent bg-clip-text bg-[length:300%_300%] rainbow"
+>
+  Websites built with custom design and code
+</h1>
