--- a/src/layout/PageLayout.astro
+++ b/src/layout/PageLayout.astro
@@ -1,11 +1,13 @@
 ---
+import "../styles/global.css";
+import Navbar from "../components/ui/Navbar.astro";
+
 interface Props {
   title: string;
   description: string;
 }
 const { title } = Astro.props;
 const { description } = Astro.props;
-import "../styles/global.css";
 ---
 
 <html lang="en">
@@ -19,5 +21,8 @@ import "../styles/global.css";
     <meta property="og:image" content="/logo.jpg" />
     <title>{title}</title>
   </head>
-  <body><slot /></body>
+  <body>
+    <Navbar />
+    <slot /></body
+  >
 </html>
