--- a/src/components/ui/buttons/Buttons.astro
+++ b/src/components/ui/buttons/Buttons.astro
@@ -1,8 +1,8 @@
 ---
-import Arrow from "../icons/Arrow.astro";
+import Arrow from "../../icons/Arrow.astro";
 
 interface Props {
-  buttonType: "primary" | "secondary" | "smallPrimary";
+  buttonType: "primary" | "secondary" | "mobileMenuPrimary" | "smallPrimary";
   text: string;
   href: string;
   isHiddenForMobile?: boolean;
@@ -11,11 +11,13 @@ const { buttonType, text, href, isHiddenForMobile } = Astro.props;
 
 function getButtonStyles() {
   const baseStyle =
-    "group transition-colors rounded-full flex gap-1 items-center";
+    "group transition-colors rounded-full inline-flex justify-center gap-1 items-center";
 
   switch (buttonType) {
     case "primary":
       return `${baseStyle} px-4 py-3  md:px-8 md:lg:py-4 bg-gray-900 text-white hover:bg-gray-700`;
+    case "mobileMenuPrimary":
+      return `${baseStyle} text-2xl px-10 py-4 md:px-4 bg-gray-900 text-white hover:bg-gray-700`;
     case "smallPrimary":
       return `${baseStyle} px-3 py-1 md:px-4 md:py-2 text-xs md:text-sm bg-gray-900 text-white hover:bg-gray-700`;
     case "secondary":
@@ -26,12 +28,10 @@ function getButtonStyles() {
 function getArrowStyles() {
   const baseStyle = "w-6 h-6 group-hover:translate-x-3 transition-transform";
   switch (buttonType) {
-    case "primary":
-      return `stroke-white fill-white ${baseStyle}`;
-    case "smallPrimary":
-      return `stroke-white fill-white ${baseStyle}`;
     case "secondary":
       return `stroke-black fill-black ${baseStyle}`;
+    default:
+      return `stroke-white fill-white ${baseStyle}`;
   }
 }
 ---
