--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,6 +36,22 @@
   }
 }
 
+.animate-fade-in {
+  animation: fade-in ease 0.7s;
+  animation-iteration-count: 1;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
