--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -27,7 +27,7 @@ import HamburgerMenu from "./HamburgerMenu.astro";
   </nav>
   <nav
     aria-label="mobile nav menu"
-    class="z-50 h-screen overflow-y-auto bg-white mt-5 mobile-nav-menu absolute hidden border-t-2 w-full border-gray-400"
+    class="z-50 h-screen overflow-y-auto bg-white mt-5 mobile-nav-menu absolute hidden w-full"
   >
     <ul class="flex flex-col items-center">
       <li class="mt-20">
