fix error in copy text

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,7 +13,7 @@ import Buttons from "./ui/buttons/Buttons.astro";
       websites.
     </span>
     <span class="block">
-      Design, code, test, SEO, and deploy. All taken care for you.
+      Design, code, test, SEO, and deploy. All taken care of for you.
     </span>
   </h2>
   <div class="flex gap-4">
