remove uncessary class

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import PageLayout from "../layout/PageLayout.astro";
   title="Wesley Jessie - Freelance web design and development"
   description="Get custom made websites that stand out from templates. Life time gurantee."
 >
-  <main class="relative z-10 mx-6 index">
+  <main class="relative z-10 mx-6">
     <Hero />
   </main>
 </PageLayout>
