feat: no template section and animation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Hero from "../components/Hero.astro";
+import NoTemplateSection from "../components/NoTemplateSection.astro";
 import PageLayout from "../layout/PageLayout.astro";
 ---
 
@@ -9,5 +10,6 @@ import PageLayout from "../layout/PageLayout.astro";
 >
   <main class="relative z-10 mx-6">
     <Hero />
+    <NoTemplateSection />
   </main>
 </PageLayout>
