add no template section subtitle

--- a/src/components/NoTemplateSection.astro
+++ b/src/components/NoTemplateSection.astro
@@ -2,7 +2,7 @@
 import Strikethrough from "./Strikethrough.astro";
 ---
 
-<div class="mt-20 text-gray-800 flex justify-center">
+<div class="mt-32 text-gray-800 flex justify-center">
   <h3
     class="text-center font-bold text-5xl md:text-5xl xl:text-6xl 2xl:text-7xl"
   >
@@ -10,4 +10,16 @@ import Strikethrough from "./Strikethrough.astro";
     <Strikethrough />
     <span> websites.</span>
   </h3>
+</div>
+<div class="flex justify-center">
+  <p class="mt-2 xl:max-w-2xl 2xl:max-w-3xl text-center text-gray-500">
+    <span class="block">
+      Tell your potential clients that your business is different by using a
+      unique website.
+    </span>
+    <span class="block"
+      >A template website tells them your business is no different.</span
+    >
+    <div></div>
+  </p>
 </div>
