use tailwind util classes for max width instead

--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -23,7 +23,7 @@
 </style>
 
 <h1
-  class="text-6xl md:text-6xl xl:text-7xl 2xl:text-8xl rainbow xl:w-3/4 2xl:w-[70%] py-2 text-center font-bold text-transparent bg-clip-text bg-[length:300%_300%] rainbow"
+  class="text-6xl md:text-7xl xl:text-8xl rainbow xl:max-w-5xl 2xl:max-w-7xl py-2 text-center font-bold text-transparent bg-clip-text bg-[length:300%_300%] rainbow"
 >
   Websites built with custom design and code
 </h1>
