--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,9 +5,7 @@ import Buttons from "./ui/buttons/Buttons.astro";
 
 <div class="flex flex-col gap-6 items-center mt-24">
   <HeroText />
-  <h2
-    class="w-[90%] md:w-2/3 lg:w-1/2 text-lg md:text-xl text-gray-500 text-center"
-  >
+  <h2 class="max-w-3xl text-lg md:text-xl text-gray-500 text-center">
     <span class="block">
       A freelancer developer that builds you bespoke, stunning, and fast
       websites.
