add background svg

--- a/src/layout/PageLayout.astro
+++ b/src/layout/PageLayout.astro
@@ -21,7 +21,7 @@ const { description } = Astro.props;
     <meta property="og:image" content="/logo.jpg" />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="bg-white bg-graph-papper">
     <Navbar />
     <slot /></body
   >
