--- a/src/components/NoTemplateSection.astro
+++ b/src/components/NoTemplateSection.astro
@@ -1,25 +1,58 @@
 ---
 import Strikethrough from "./Strikethrough.astro";
+import Brain from "./icons/Brain.astro";
+import Commet from "./icons/Commet.astro";
+import Maintenance from "./icons/Maintenance.astro";
+import Success from "./illustrations/Success.astro";
+import SectionTitleH3 from "./ui/text/SectionTitleH3.astro";
+import SectionSubtitleP from "./ui/text/SectionSubtitleP.astro";
+import SmallPargraph from "./ui/text/SmallPargraph.astro";
 ---
 
-<div class="mt-32 text-gray-800 flex justify-center">
-  <h3
-    class="text-center font-bold text-5xl md:text-5xl xl:text-6xl 2xl:text-7xl"
+<section>
+  <div class="mt-32 flex justify-center">
+    <SectionTitleH3>
+      <span>{"No "}</span>
+      <Strikethrough />
+      <span> websites.</span>
+    </SectionTitleH3>
+  </div>
+  <div class="flex justify-center">
+    <SectionSubtitleP>
+      <span class="block">
+        Tell your clients that your business is different by using a unique
+        website.
+      </span>
+      <span class="block"
+        >A template website tells them your business is no different.</span
+      >
+    </SectionSubtitleP>
+  </div>
+
+  <div
+    class="mt-10 flex flex-col items-center lg:flex-row lg:items-start lg:justify-center"
   >
-    <span>{"No "}</span>
-    <Strikethrough />
-    <span> websites.</span>
-  </h3>
-</div>
-<div class="flex justify-center">
-  <p class="mt-2 xl:max-w-2xl 2xl:max-w-3xl text-center text-gray-500">
-    <span class="block">
-      Tell your potential clients that your business is different by using a
-      unique website.
-    </span>
-    <span class="block"
-      >A template website tells them your business is no different.</span
-    >
-    <div></div>
-  </p>
-</div>
+    <Success styles="relative z-20 w-80 md:w-[400px] lg:w-[500px] h-auto" />
+    <div>
+      <SmallPargraph
+        mt={false}
+        title="Start the design process from you, not a template."
+        description="Make websites that work with your customers and business problems. Starting with template is like starting from the end. We start with the why."
+      >
+        <Brain slot="icon" styles="w-12 h-12 xl:w-14 xl:h-14" />
+      </SmallPargraph>
+      <SmallPargraph
+        title="Enjoy the fast performance."
+        description="Use industry standard frameworks and technologies to ensure yourwebsites will be blazingly fast."
+      >
+        <Commet slot="icon" styles="w-12 h-12 xl:w-14 xl:h-14" />
+      </SmallPargraph>
+      <SmallPargraph
+        title="Maintain your website with ease."
+        description="Building a website is only half the story. Maintenance is the other. Custom coding allows easy addition of new features without relying on third-party plugins that might slow down your site. With custom code, you gain better control over updates, reducing compatibility conflicts. Say goodbye to plugin hassles!"
+      >
+        <Maintenance slot="icon" styles="w-12 h-12 xl:w-14 xl:h-14" />
+      </SmallPargraph>
+    </div>
+  </div>
+</section>
