--- a/src/components/ui/text/SmallPargraph.astro
+++ b/src/components/ui/text/SmallPargraph.astro
@@ -14,7 +14,7 @@ const { title, description, mt = true } = Astro.props;
 >
   <slot name="icon" />
   <div>
-    <h4 class="text-center lg:text-left">
+    <h4 class="text-center lg:text-left text-gray-800">
       {title}
     </h4>
     <p class="text-gray-500 max-w-lg text-center lg:text-left">
