--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Hero from "../components/Hero.astro";
-import NoTemplateSection from "../components/NoTemplateSection.astro";
+import GuranteeSection from "../components/sections/GuranteeSection.astro";
+import NoTemplateSection from "../components/sections/NoTemplateSection.astro";
 import PageLayout from "../layout/PageLayout.astro";
 ---
 
@@ -11,5 +12,6 @@ import PageLayout from "../layout/PageLayout.astro";
   <main class="relative z-10 mx-6">
     <Hero />
     <NoTemplateSection />
+    <GuranteeSection />
   </main>
 </PageLayout>
