--- a/src/components/icons/Brain.astro
+++ b/src/components/icons/Brain.astro
@@ -1,39 +1,10 @@
 ---
+import "../../styles/float-animation.css";
 interface Props {
   styles?: string;
 }
 const { styles } = Astro.props;
 ---
-
-<style>
-  .animate-float-left {
-    animation: float-left 1s ease-in-out infinite;
-    animation-direction: alternate;
-  }
-
-  .animate-float-right {
-    animation: float-right 1s ease-in-out infinite;
-    animation-direction: alternate;
-  }
-
-  @keyframes float-left {
-    from {
-      transform: translateY(0px);
-    }
-    to {
-      transform: translateX(-2px) translateY(-2px);
-    }
-  }
-
-  @keyframes float-right {
-    from {
-      transform: translateY(0px);
-    }
-    to {
-      transform: translateX(2px) translateY(-2px);
-    }
-  }
-</style>
 
 <svg
   class={styles}
