add design and code section

--- a/src/components/sections/GuranteeSection.astro
+++ b/src/components/sections/GuranteeSection.astro
@@ -10,7 +10,7 @@ import SectionTitleH3 from "../ui/text/SectionTitleH3.astro";
   <SectionTitleH3>
     <span class="flex flex-col items-center lg:flex-row">
       <span>Lifetime</span>
-      <span><Diamond styles=" w-20 h-20" /></span>
+      <span><Diamond styles="w-20 h-20" /></span>
       <span>Gurantee</span>
     </span>
   </SectionTitleH3>
@@ -28,7 +28,7 @@ import SectionTitleH3 from "../ui/text/SectionTitleH3.astro";
 <div
   class="mt-5 flex flex-col lg:flex-row lg:justify-center items-center gap-2"
 >
-  <Zen styles="w-12 h-12 xl:w-14 xl:h-14" />
+  <Zen styles="w-14 h-14 xl:w-16 xl:h-16" />
   <h3 class="text-gray-800">Enjoy peace of mind</h3>
 </div>
 <div class="flex justify-center">
@@ -37,6 +37,6 @@ import SectionTitleH3 from "../ui/text/SectionTitleH3.astro";
     of charge.
   </p>
 </div>
-<div class="flex justify-center">
+<div class="mt-10 flex justify-center">
   <Celebrate styles="w-80 md:w-[400px] lg:w-[500px] h-auto" />
 </div>
