--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Hero from "../components/Hero.astro";
+import DesignAndCodeSection from "../components/sections/DesignAndCodeSection.astro";
 import GuranteeSection from "../components/sections/GuranteeSection.astro";
 import NoTemplateSection from "../components/sections/NoTemplateSection.astro";
 import PageLayout from "../layout/PageLayout.astro";
@@ -13,5 +14,6 @@ import PageLayout from "../layout/PageLayout.astro";
     <Hero />
     <NoTemplateSection />
     <GuranteeSection />
+    <DesignAndCodeSection />
   </main>
 </PageLayout>
