--- a/src/components/Strikethrough.astro
+++ b/src/components/Strikethrough.astro
@@ -1,20 +1,3 @@
-<script>
-  let target = document.querySelector(".should-strike-through");
-  let observer = new IntersectionObserver(
-    (entries) => {
-      entries.forEach((entry) => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add("animate-strike");
-        }
-      });
-    },
-    {
-      threshold: 1,
-    }
-  );
-  target && observer.observe(target);
-</script>
-
 <style>
   .animate-strike {
     width: 100%;
@@ -37,3 +20,7 @@
   <span class="should-strike-through left-0 top-1/2 absolute bg-[#FA8787]"
   ></span>
 </div>
+
+<script>
+  import "../scripts/observer.ts";
+</script>
