--- a/src/components/sections/NoTemplateSection.astro
+++ b/src/components/sections/NoTemplateSection.astro
@@ -30,7 +30,7 @@ import SmallPargraph from "../ui/text/SmallPargraph.astro";
   </div>
 
   <div
-    class="mt-10 flex flex-col items-center lg:flex-row lg:items-start lg:justify-center"
+    class="mt-10 flex flex-col items-center gap-y-5 lg:gap-y-0 lg:flex-row lg:items-start lg:justify-center"
   >
     <Success styles="w-80 md:w-[400px] lg:w-[500px] h-auto" />
     <div>
