restyle: lightning animation uses opacity instead

--- a/src/components/icons/Lightning.astro
+++ b/src/components/icons/Lightning.astro
@@ -14,12 +14,12 @@ const { styles } = Astro.props;
     0%,
     100% {
       transform: scale(1.02);
-      filter: brightness(2);
+      opacity: 1;
     }
 
     50% {
       transform: scale(1);
-      filter: brightness(0.5);
+      opacity: 0.5;
     }
   }
 </style>
