feat: make navbar sticky

--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -5,7 +5,7 @@ import Buttons from "./buttons/Buttons.astro";
 import HamburgerMenu from "./HamburgerMenu.astro";
 ---
 
-<header class="mt-4 mx-5 lg:mx-20 z-50 relative">
+<header class="mx-5 lg:mx-20 z-50 sticky top-0 backdrop-blur-sm pt-7 pb-5">
   <nav class="flex justify-between items-center">
     <div class="flex items-center gap-8">
       <a>
