--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,3 +17,7 @@ import PageLayout from "../layout/PageLayout.astro";
     <DesignAndCodeSection />
   </main>
 </PageLayout>
+
+<script>
+  import "../scripts/observer.ts";
+</script>
