import observer following astro doc

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,4 @@ import PageLayout from "../layout/PageLayout.astro";
   </main>
 </PageLayout>
 
-<script>
-  import "../scripts/observer.ts";
-</script>
+<script src="../scripts/observer.ts"></script>
