refactor: move hero  files to section folder

--- a/src/components/sections/NoTemplateSection.astro
+++ b/src/components/sections/NoTemplateSection.astro
@@ -1,5 +1,5 @@
 ---
-import Strikethrough from "../Strikethrough.astro";
+import Strikethrough from "./Strikethrough.astro";
 import Brain from "../icons/Brain.astro";
 import Commet from "../icons/Commet.astro";
 import Maintenance from "../icons/Maintenance.astro";
