--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Hero from "../components/Hero.astro";
+import Hero from "../components/sections/Hero.astro";
 import DesignAndCodeSection from "../components/sections/DesignAndCodeSection.astro";
 import GuranteeSection from "../components/sections/GuranteeSection.astro";
 import NoTemplateSection from "../components/sections/NoTemplateSection.astro";
