add testimonials section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import DesignAndCodeSection from "../components/sections/DesignAndCodeSection.as
 import GuranteeSection from "../components/sections/GuranteeSection.astro";
 import NoTemplateSection from "../components/sections/NoTemplateSection.astro";
 import PageLayout from "../layout/PageLayout.astro";
+import Testimonials from "../components/sections/Testimonials.astro";
 ---
 
 <PageLayout
@@ -12,6 +13,7 @@ import PageLayout from "../layout/PageLayout.astro";
 >
   <main class="relative z-10 mx-6">
     <Hero />
+    <Testimonials />
     <NoTemplateSection />
     <GuranteeSection />
     <DesignAndCodeSection />
