restyle: add margin to testimonal person

--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -40,7 +40,7 @@ import CurlyArrow from "../icons/CurlyArrow.astro";
     very happy with our website."`
     }
   </p>
-  <p class="mt-4 lg:mt-2 text-gray-800">Karen Chen, Marketing Manager</p>
+  <p class="mt-4 text-gray-800">Karen Chen, Marketing Manager</p>
   <p class="text-gray-500 testimonial-target">New Zealand Blue Spring Water</p>
   <a
     class="inline-flex items-center underline hover:no-underline text-gray-400 text-sm"
