add: bottom cta section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import GuranteeSection from "../components/sections/GuranteeSection.astro";
 import NoTemplateSection from "../components/sections/NoTemplateSection.astro";
 import PageLayout from "../layout/PageLayout.astro";
 import Testimonials from "../components/sections/Testimonials.astro";
+import BottomCTA from "../components/sections/BottomCTA.astro";
 ---
 
 <PageLayout
@@ -17,6 +18,7 @@ import Testimonials from "../components/sections/Testimonials.astro";
     <NoTemplateSection />
     <GuranteeSection />
     <DesignAndCodeSection />
+    <BottomCTA />
   </main>
 </PageLayout>
 
