reduce mt in hero section on phones

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -3,7 +3,7 @@ import HeroText from "./HeroText.astro";
 import Buttons from "../ui/buttons/Buttons.astro";
 ---
 
-<div class="flex flex-col gap-6 items-center mt-24">
+<div class="flex flex-col gap-6 items-center mt-16 lg:mt-24">
   <HeroText />
   <h2 class="max-w-3xl text-lg md:text-xl text-gray-500 text-center">
     <span class="block">
