increase px in primary btn on phones

--- a/src/components/ui/buttons/Buttons.astro
+++ b/src/components/ui/buttons/Buttons.astro
@@ -15,7 +15,7 @@ function getButtonStyles() {
 
   switch (buttonType) {
     case "primary":
-      return `${baseStyle} px-4 py-3  md:px-8 md:lg:py-4 bg-gray-900 text-white hover:bg-gray-700`;
+      return `${baseStyle} px-5 py-3 md:px-8 md:py-4 bg-gray-900 text-white hover:bg-gray-700`;
     case "mobileMenuPrimary":
       return `${baseStyle} text-2xl px-10 py-4 md:px-4 bg-gray-900 text-white hover:bg-gray-700`;
     case "smallPrimary":
