add accesibility tags

--- a/src/components/icons/Brain.astro
+++ b/src/components/icons/Brain.astro
@@ -7,6 +7,7 @@ const { styles } = Astro.props;
 ---
 
 <svg
+  role="img"
   class={styles}
   xmlns="http://www.w3.org/2000/svg"
   width="40"
@@ -14,6 +15,7 @@ const { styles } = Astro.props;
   viewBox="0 0 40 40"
   fill="none"
 >
+  <title>Brain</title>
   <path
     d="M16.175 18.9066C13.3892 17.2835 12.5094 13.5946 14.2689 10.791M25.119 19.0541C25.119 16.2506 27.465 13.8897 30.2508 13.8897M6.64453 20.5296C8.69725 19.2016 11.3365 19.792 12.6561 21.8577"
     stroke="#303C42"
