--- a/src/components/icons/Diamond.astro
+++ b/src/components/icons/Diamond.astro
@@ -8,6 +8,7 @@ const { styles } = Astro.props;
 ---
 
 <svg
+  role="img"
   class={styles}
   xmlns="http://www.w3.org/2000/svg"
   width="80"
@@ -15,6 +16,7 @@ const { styles } = Astro.props;
   viewBox="0 0 80 80"
   fill="none"
 >
+  <title>Shinning diamond</title>
   <path
     d="M57.2495 25.6855H22.2797L9 38.7829L38.8074 68.2132L39.7671 69.1602L40.7262 68.2132L70.5385 38.7829L57.2495 25.6855ZM39.7668 66.1018L37.2634 63.6308L12.1022 38.7829L23.1852 27.8492H56.3431L67.4372 38.7829L42.2702 63.6311L39.7668 66.1018Z"
     fill="#191818"></path>
