--- a/src/components/icons/Logo.astro
+++ b/src/components/icons/Logo.astro
@@ -6,6 +6,7 @@ const { styles } = Astro.props;
 ---
 
 <svg
+  role="img"
   class={styles}
   width="71"
   height="40"
@@ -13,6 +14,7 @@ const { styles } = Astro.props;
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
 >
+  <title>Logo: made of Wesley Jessie's inititals WJ.</title>
   <path
     d="M18.3169 7.5901C16.9193 5.26821 17.1493 2.56592 18.8303 1.55439L18.9917 1.45701C20.6727 0.445486 23.1677 1.50774 24.5652 3.82962L41.7652 32.4097C43.1627 34.7315 42.9328 37.4336 41.2524 38.4453L41.0903 38.5428C39.4094 39.5539 36.9144 38.4916 35.5168 36.1697L28.6248 24.7184L18.3169 7.5901Z"
     stroke="black"
