--- a/src/components/sections/DesignAndCodeSection.astro
+++ b/src/components/sections/DesignAndCodeSection.astro
@@ -40,6 +40,7 @@ import SmallPargraph from "../ui/text/SmallPargraph.astro";
         <span class="absolute left-0 opacity-1"
           ><span class="typewriter"></span>
           <div
+            aria-hidden="true"
             class="animate-blink absolute top-0 right-0 bg-[#FF660B] h-full w-1"
           >
           </div>
