--- a/src/components/sections/Strikethrough.astro
+++ b/src/components/sections/Strikethrough.astro
@@ -15,7 +15,7 @@
   }
 </style>
 
-<div class="inline-block relative">
+<div aria-hidden="true" class="inline-block relative">
   <span>template</span>
   <span class="should-strike-through left-0 top-1/2 absolute bg-[#FA8787]"
   ></span>
