--- a/src/components/icons/Sparks.astro
+++ b/src/components/icons/Sparks.astro
@@ -6,6 +6,7 @@ const { styles } = Astro.props;
 ---
 
 <svg
+  role="img"
   class={styles}
   xmlns="http://www.w3.org/2000/svg"
   width="45"
@@ -13,6 +14,7 @@ const { styles } = Astro.props;
   viewBox="0 0 45 34"
   fill="none"
 >
+  <title>Sparkles</title>
   <path
     class="animate-pulse"
     d="M37.5 15C37.5 10.8577 40.8579 7.5 45 7.5C40.8579 7.5 37.5 4.14207 37.5 0C37.5 4.14206 34.1421 7.5 30 7.5C34.1421 7.5 37.5 10.8577 37.5 15Z"
