--- a/src/components/illustrations/Celebrate.astro
+++ b/src/components/illustrations/Celebrate.astro
@@ -6,12 +6,15 @@ const { styles } = Astro.props;
 ---
 
 <svg
+  role="img"
   class={styles}
   xmlns="http://www.w3.org/2000/svg"
   enable-background="new 0 0 1600 1200"
   viewBox="0 0 1600 1200"
   id="welcome"
-  ><path
+>
+  <title>Two people celebrating with confetti.</title>
+  <path
     d="M1079.6 581.3c4.9-.5 11.8-1.9 19.4-5.3 5.7-2.6 10.2-5.6 13.5-8.2.2 5.5 1.4 12.5 6.5 15.9 2.8 1.9 4.2 1 6.5 2.9 4.9 4.3 1.4 11.4 4.7 20 1.1 2.9 3.4 7 8.8 11.2 5.5-1.6 8.2.1 8.8.6 5.1 3.6 3.4 13.9-.5 19.8-1 1.6-4.6 7-10 6.8-2.4-.1-4.3-1.2-5.4-2-.5 1-6.4 11.8-1.2 21.2 4.9 8.8 15.8 9.9 20.2 10.3 12.3 1.2 21.8-4.8 32.7-11.6 8.5-5.3 12.7-8 14.7-12.6 3.8-8.7-.4-18.1-7.4-33.2-4.7-10.2-9.8-18.2-13.7-23.7 1.1-22.9-7.9-33.2-11.1-36.3-7.5-7.5-21.5-9.3-49-12.6-17.7-2.1-26.7-3.2-37.1-1.4-10.8 1.8-28.5 4.8-35.9 18.2-4.2 7.5-3.6 15.8-2.9 24.1.8 10.9 4 19.4 6.5 24.7-1.6 2.3-10.9 16.3-5.9 31.8 2.6 7.9 10.4 20.5 20 19.4 6.4-.8 10.5-7.3 11.8-9.4-2.4-7.3-5.4-20.1-4.1-35.9s6.6-27.9 10.1-34.7z"
   ></path><path
     stroke="#000"
