--- a/src/components/illustrations/CodeIllustration.astro
+++ b/src/components/illustrations/CodeIllustration.astro
@@ -6,12 +6,15 @@ const { styles } = Astro.props;
 ---
 
 <svg
+  role="img"
   class={styles}
   xmlns="http://www.w3.org/2000/svg"
   enable-background="new 0 0 1600 1200"
   viewBox="0 0 1600 1200"
   id="web-development"
-  ><g id="Layer_5"
+>
+  <title>Person doing web development on their laptop.</title>
+  <g id="Layer_5"
     ><path
       d="M600.4 467.6H303.9c-5.8 0-10.4-4.7-10.4-10.4 0-5.8 4.7-10.4 10.4-10.4h296.5c5.8 0 10.4 4.7 10.4 10.4l4-.5c0 5.7-8.7 10.9-14.4 10.9zM834.3 124H653.5c-1.4 0-2.5-1.1-2.5-2.5v-19c0-1.4 1.1-2.5 2.5-2.5h180.8c1.4 0 2.5 1.1 2.5 2.5v19c-.1 1.4-1.2 2.5-2.5 2.5zM665.4 788c9.8 32.1 19.6 64.3 29.4 96.4 53.5-1.5 107.1-2.9 160.6-4.4 3-34.6 5.9-69.3 8.9-103.9-66.3 4-132.6 8-198.9 11.9z"
     ></path><path
