--- a/src/components/sections/BottomCTA.astro
+++ b/src/components/sections/BottomCTA.astro
@@ -26,6 +26,6 @@ const colourTextStyles =
     Let's talk.
   </p>
 </div>
-<div class="mt-4 flex justify-center">
+<div class="mt-4 mb-20 flex justify-center">
   <Buttons buttonType="primary" text="Contact me" href="/" />
 </div>
