--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -2,7 +2,7 @@
 import Logo from "../icons/Logo.astro";
 ---
 
-<footer class="py-10 mt-20 bg-[#F6F6F6] bg-opacity-60 text-gray-800">
+<footer class="py-10 bg-[#F6F6F6] bg-opacity-60 text-gray-800">
   <nav
     class="mx-5 lg:mx-20 flex flex-col gap-10 lg:gap-0 lg:flex-row lg:justify-between items-center"
   >
