--- a/src/layout/PageLayout.astro
+++ b/src/layout/PageLayout.astro
@@ -6,9 +6,9 @@ import Footer from "../components/ui/Footer.astro";
 interface Props {
   title: string;
   description: string;
+  bodyStyles?: string;
 }
-const { title } = Astro.props;
-const { description } = Astro.props;
+const { title, description, bodyStyles } = Astro.props;
 ---
 
 <html lang="en">
@@ -22,7 +22,7 @@ const { description } = Astro.props;
     <meta property="og:image" content="/logo.jpg" />
     <title>{title}</title>
   </head>
-  <body class="bg-white bg-graph-papper">
+  <body class={`bg-white bg-graph-papper ${bodyStyles}`}>
     <Navbar />
     <slot />
     <Footer />
