good circle design

--- a/src/pages/contact-me.astro
+++ b/src/pages/contact-me.astro
@@ -1,5 +1,5 @@
 ---
-import Handdrawn from "../components/icons/Handdrawn.astro";
+import HanddrawnCirle from "../components/icons/HanddrawnCirle.astro";
 import PageLayout from "../layout/PageLayout.astro";
 ---
 
@@ -13,8 +13,8 @@ import PageLayout from "../layout/PageLayout.astro";
       <span class="block">
         <span>Let's make the</span>
         <div class="inline-block relative">
-          <span> best possible</span><Handdrawn
-            styles="absolute bottom-0 w-full h-auto"
+          <span class=""> best possible</span><HanddrawnCirle
+            styles=" overflow-visible absolute -bottom-3 w-full h-[200%]"
           />
         </div>
       </span>
