ok for production

--- a/src/pages/contact-me.astro
+++ b/src/pages/contact-me.astro
@@ -27,14 +27,17 @@ import PageLayout from "../layout/PageLayout.astro";
       <span> website for you</span>
       <span class="text-xs font-normal">(within your budget)</span>
     </h2>
+
     <div
-      class="mt-10 border-2 p-6 xl:p-12 lg:mb-0 border-gray-300 rounded-lg text-gray-800"
+      class="mt-10 border-2 p-6 md:p-12 xl:p-12 lg:mb-0 border-gray-300 rounded-lg text-gray-800"
     >
       <div class="flex flex-col lg:flex-row items-center gap-x-2">
         <p class="text-gray-800 text-lg">wesley@wesleyjessie.com</p>
         <CopyEmail />
       </div>
-      <p class="text-gray-800 text-lg text-center mt-5">+44 7597 296544</p>
+      <p class="text-gray-800 text-lg text-center lg:text-left mt-5">
+        +44 7597 296544
+      </p>
     </div>
   </main>
 </PageLayout>
