--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -1,8 +1,9 @@
 ---
 import Logo from "../icons/Logo.astro";
+import CopyEmail from "./buttons/CopyEmail.astro";
 ---
 
-<footer class="py-10 mt-20 bg-[#F6F6F6] bg-opacity-60 text-gray-800">
+<footer class="py-10 bg-[#F6F6F6] bg-opacity-40 text-gray-800">
   <nav
     class="mx-5 lg:mx-20 flex flex-col gap-10 lg:gap-0 lg:flex-row lg:justify-between items-center"
   >
@@ -20,9 +21,12 @@ import Logo from "../icons/Logo.astro";
       <a class="text-sm xl:text-base text-gray-500">About me</a>
       <a class="text-sm xl:text-base text-gray-500">FAQ</a>
     </div>
-    <div class="inline-flex text-center lg:text-left flex-col">
+    <div
+      class="inline-flex text-center lg:text-left flex-col items-center lg:items-start"
+    >
       <p>wesley@wesleyjessie.com</p>
-      <p>07597296544</p>
+      <CopyEmail />
+      <p class="mt-3">07597296544</p>
     </div>
   </nav>
 </footer>
