--- a/src/pages/contact-me.astro
+++ b/src/pages/contact-me.astro
@@ -29,7 +29,7 @@ import PageLayout from "../layout/PageLayout.astro";
     </h2>
 
     <div
-      class="mt-10 border-2 p-6 md:p-12 xl:p-12 lg:mb-0 border-gray-300 rounded-lg text-gray-800"
+      class="mt-10 border-2 px-6 py-12 md:px-12 md:py-12 lg:mb-0 border-gray-300 rounded-lg text-gray-800"
     >
       <div class="flex flex-col lg:flex-row items-center gap-x-2">
         <p class="text-gray-800 text-lg">wesley@wesleyjessie.com</p>
