add href to broken links

--- a/src/components/sections/BottomCTA.astro
+++ b/src/components/sections/BottomCTA.astro
@@ -27,5 +27,5 @@ const colourTextStyles =
   </p>
 </div>
 <div class="mt-4 mb-20 flex justify-center">
-  <Buttons buttonType="primary" text="Contact me" href="/" />
+  <Buttons buttonType="primary" text="Contact me" href="/contact-me" />
 </div>
