--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -15,7 +15,7 @@ import Buttons from "../ui/buttons/Buttons.astro";
     </span>
   </h2>
   <div class="flex gap-4">
-    <Buttons buttonType="primary" text="Contact me" href="/" />
+    <Buttons buttonType="primary" text="Contact me" href="/contact-me" />
     <Buttons buttonType="secondary" text="Pricing" href="/" />
   </div>
   <div class="flex gap-4 items-center">
