--- a/src/components/icons/Clipboard.astro
+++ b/src/components/icons/Clipboard.astro
@@ -6,6 +6,7 @@ const { styles } = Astro.props;
 ---
 
 <svg
+  role="img"
   class={styles}
   xmlns="http://www.w3.org/2000/svg"
   width="20.48"
@@ -16,7 +17,9 @@ const { styles } = Astro.props;
   stroke="currentColor"
   fill="currentColor"
   id="copy"
-  ><path
+>
+  <title>Clipboard</title>
+  <path
     fill-rule="nonzero"
     d="M73.78 43.65l86.5 0 0 -12.89c0,-5.69 -2.33,-10.87 -6.09,-14.63 -3.76,-3.76 -8.93,-6.09 -14.63,-6.09l-108.2 0c-5.69,0 -10.87,2.33 -14.63,6.09 -3.76,3.76 -6.09,8.93 -6.09,14.63l0 108.2c0,5.69 2.33,10.87 6.09,14.63 3.76,3.76 8.93,6.09 14.63,6.09l11.71 0 0 -85.32c0,-8.45 3.46,-16.13 9.02,-21.69 5.56,-5.56 13.24,-9.02 21.69,-9.02zm96.49 0l11.72 0c8.45,0 16.13,3.46 21.69,9.02 5.56,5.56 9.02,13.24 9.02,21.69l0 108.2c0,8.45 -3.45,16.13 -9.02,21.69 -5.56,5.56 -13.24,9.02 -21.69,9.02l-108.2 0c-8.45,0 -16.13,-3.45 -21.69,-9.02 -5.56,-5.56 -9.02,-13.24 -9.02,-21.69l0 -12.89 -11.71 0c-8.45,0 -16.13,-3.46 -21.69,-9.02 -5.56,-5.56 -9.02,-13.24 -9.02,-21.69l0 -108.2c0,-8.45 3.45,-16.13 9.02,-21.69 5.56,-5.56 13.24,-9.02 21.69,-9.02l108.2 0c8.45,0 16.13,3.45 21.69,9.02 5.56,5.56 9.02,13.24 9.02,21.69l0 12.89zm11.72 10l-16.71 0 -91.49 0c-5.69,0 -10.87,2.33 -14.63,6.09 -3.76,3.76 -6.09,8.93 -6.09,14.63l0 90.32 0 17.89c0,5.69 2.33,10.87 6.09,14.63 3.76,3.76 8.93,6.09 14.63,6.09l108.2 0c5.69,0 10.87,-2.33 14.63,-6.09 3.76,-3.76 6.09,-8.93 6.09,-14.63l0 -108.2c0,-5.69 -2.33,-10.87 -6.09,-14.63 -3.76,-3.76 -8.93,-6.09 -14.63,-6.09z"
   ></path></svg
