--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -8,7 +8,7 @@ import HamburgerMenu from "./HamburgerMenu.astro";
 <header class="mx-5 lg:mx-20 z-50 sticky top-0 backdrop-blur-sm pt-7 pb-5">
   <nav class="flex justify-between items-center">
     <div class="flex items-center gap-8">
-      <a>
+      <a href="/">
         <Logo styles="w-12 h-auto lg:w-16" />
       </a>
       <a class="hidden lg:block text-sm">Pricing</a>
@@ -21,7 +21,7 @@ import HamburgerMenu from "./HamburgerMenu.astro";
       isHiddenForMobile
       buttonType="smallPrimary"
       text="Contact me"
-      href="/"
+      href="/contact-me"
     />
     <HamburgerMenu />
   </nav>
